# luke-richardson.xyz

./: .gitignore  luke-richardson.xyz.code-workspace
homepage/: app.py
homepage/templates/: index.html
idms/: Cargo.toml
idms/src/: lib.rs  main.rs  security.rs
idms/src/secure/: keys.rs  mod.rs  seal.rs  secure_channel.rs  sym.rs
idms/tests/: secure_test.rs
private_messaging/: Cargo.toml
private_messaging/encryption/: Cargo.toml
private_messaging/encryption/src/: account.rs  identity.rs  lib.rs  main.rs  shared.rs
private_messaging/messages/: Cargo.toml
private_messaging/messages/src/: main.rs
private_messaging/protocol/: Cargo.toml
private_messaging/protocol/src/: account.rs  chat.rs  main.rs  messages.rs
