[package]
name = "idms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
x25519-dalek = "1"
serde = { version = "1.0", features = ["derive"] }
rand_core = { version = "0.5", default-features = false }
serde_json = "1.0"
ring = "0.16.20"
