[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "encryption"
path = "src/lib.rs"

[[bin]]
name = "encryption_main"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
ring = "0.16.20"

