[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encryption = { path = "../encryption" }
openssl = { version = "0.10", features = ["vendored"] }
ring = "0.16.20"
serde = { version = "1.0.144", features = ["derive"] }

